# django-prova-pi

./: .gitignore  pyproject.toml
alunos/: admin.py  models.py  serializers.py  views.py
alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_aluno.py
config/: settings.py  urls.py
pedidos/: models.py  serializers.py  views.py
pedidos/migrations/: 0001_initial.py
